--- a/slide14.html
+++ b/slide14.html
@@ -252,5 +252,16 @@
 </div>
 </div>
 </div>
+
+<div style="position: fixed; bottom: 20px; right: 20px; z-index: 9999; 
+                background: rgba(15, 23, 42, 0.9); border: 1px solid #38bdf8; 
+                border-radius: 50px; padding: 10px 20px; display: flex; gap: 15px; 
+                box-shadow: 0 10px 25px rgba(0,0,0,0.5); backdrop-filter: blur(10px);">
+<a href="slide13.html" onmouseout="this.style.color='#94a3b8'" onmouseover="this.style.color='#fff'" style="text-decoration: none; color: #94a3b8; font-weight: bold; font-family: sans-serif; transition: color 0.2s;">← Prev</a>
+<span style="color: #334155;">|</span>
+<a href="index.html" onmouseout="this.style.color='#38bdf8'" onmouseover="this.style.color='#fff'" style="text-decoration: none; color: #38bdf8; font-weight: bold; font-family: sans-serif; transition: color 0.2s;">Home</a>
+<span style="color: #334155;">|</span>
+<a href="slide15.html" onmouseout="this.style.color='#94a3b8'" onmouseover="this.style.color='#fff'" style="text-decoration: none; color: #94a3b8; font-weight: bold; font-family: sans-serif; transition: color 0.2s;">Next →</a>
+</div>
 </body>
 </html>
