--- a/slide4.html
+++ b/slide4.html
@@ -15,17 +15,20 @@
             font-family: 'Inter', sans-serif;
             background-color: #0f172a; /* Slate 900 */
             color: white;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .slide-container {
-            width: 1280px;
-            height: 720px;
+            width: 100vw;
+            min-height: 100vh;
+            height: auto;
             position: relative;
             display: flex;
             flex-direction: column;
             background-color: #0f172a;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
             padding: 3rem 4rem;
         }
 
@@ -108,7 +111,8 @@
             justify-content: space-between;
             transition: all 0.3s ease;
             position: relative;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
             backdrop-filter: blur(10px);
         }
 
@@ -201,7 +205,8 @@
             background-color: rgba(255, 255, 255, 0.1);
             border-radius: 3px;
             margin-top: auto;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .stat-bar-fill {
@@ -347,3 +352,6 @@
 </div>
 </body>
 </html>
+
+
+
