--- a/slide6.html
+++ b/slide6.html
@@ -15,17 +15,20 @@
             font-family: 'Inter', sans-serif;
             background-color: #0f172a;
             color: white;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .slide-container {
-            width: 1280px;
-            height: 720px;
+            width: 100vw;
+            min-height: 100vh;
+            height: auto;
             position: relative;
             display: flex;
             flex-direction: column;
             background-color: #0f172a;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
             padding: 2rem 3rem;
         }
 
@@ -341,3 +344,6 @@
 </div>
 </body>
 </html>
+
+
+
