--- a/slide9.html
+++ b/slide9.html
@@ -15,17 +15,20 @@
             font-family: 'Inter', sans-serif;
             background-color: #0f172a; /* Slate 900 */
             color: white;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .slide-container {
-            width: 1280px;
-            height: 720px;
+            width: 100vw;
+            min-height: 100vh;
+            height: auto;
             position: relative;
             display: flex;
             flex-direction: column;
             background-color: #0f172a;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
             padding: 2rem 3rem;
         }
 
@@ -100,7 +103,8 @@
             flex-direction: column;
             transition: all 0.3s ease;
             position: relative;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
             backdrop-filter: blur(8px);
         }
 
@@ -369,3 +373,6 @@
 </div>
 </body>
 </html>
+
+
+
